<resources>

    <string name="app_name">Pasbeli</string>
    <string name="title_history">Riwayat</string>
    <string name="edit_place_name">Nama tempat</string>
    <string name="nama_komoditas">Nama barang</string>
    <string name="harga_komoditas">Harga satuan</string>
    <string name="location_now">Lokasi sekarang</string>
    <string name="kirim_hasil">Kirim data</string>
    <string name="add_data">Tambahkan data</string>
    <string name="add_pasar">Tambahkan pasar</string>
    <string name="sign_out">Keluar</string>

    <string name="num_komoditas">%d komoditas</string>
    <string name="tmp_harga">mendata %s seharga %s</string>
    <string name="tmp_location">%s,%s</string>


    <string name="desc_logo">Pasbeli logo</string>
    <string name="desc_app">consumer price data collection</string>
    <string name="welcome_msg">Welcome to Pasbeli</string>

</resources>
