<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/container_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_komoditas"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/container_title">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/harga_komoditas"/>

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_ukuran"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:entries="@array/ukuran_array"/>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/container_tempat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_price">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_tempat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_place_name"
            android:enabled="false"/>

    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/btn_set_loc"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignBottom="@id/container_lat_lng"
        app:srcCompat="@drawable/ic_my_location_black_24dp"
        android:layout_below="@id/container_tempat"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/container_lat_lng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_tempat"
        android:layout_toRightOf="@id/btn_set_loc">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_lat_lng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_now"
            android:enabled="false"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_komoditi_fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:srcCompat="@drawable/ic_add_location_white_24dp"/>

</RelativeLayout>
