<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="com.mahendri.pasbeli.ui.splash.SplashViewModel"/>
    </data>

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/google_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="@dimen/dp100_margin"
                android:contentDescription="@string/desc_logo"
                app:srcCompat="@drawable/ic_logo_48dp" />

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/welcome_msg"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fadeScrollbars="true"
                android:gravity="center"
                android:maxLines="5"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:text="@string/desc_app"
                android:textStyle="italic"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/primary_900">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="@{viewmodel.isLogin ? View.GONE : View.VISIBLE}"
                app:onClick="@{viewmodel}"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerInParent="true"
                android:visibility="@{viewmodel.isLogin ? View.VISIBLE : View.GONE}"
                tools:visibility="gone"/>

        </RelativeLayout>

    </LinearLayout>

</layout>